--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix-dark-mode-v2",
+  "name": "remix-project",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -11,18 +11,18 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/node": "^2.12.0",
-    "@remix-run/react": "^2.12.0",
-    "@remix-run/serve": "^2.12.0",
-    "clsx": "^2.1.1",
+    "@remix-run/node": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/serve": "^2.13.1",
     "isbot": "^4.1.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.12.0",
+    "@remix-run/dev": "^2.13.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
